<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.RuneFactoryTranslator.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/Theme.RuneFactoryTranslator.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Spinner
            android:id="@+id/spinner_Select"
            android:layout_width="160dp"
            android:layout_height="48dp"
            android:layout_marginTop="80dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/linearLayout_Search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="32dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spinner_Select">

            <EditText
                android:id="@+id/editText_Search"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:ems="10"
                android:hint="@string/placeholder_search"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                android:inputType="text"
                android:minHeight="48dp" />

            <Button
                android:id="@+id/button_Search"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/placeholder_search_submit"
                app:icon="?android:attr/actionModeWebSearchDrawable"
                app:iconTint="@color/design_default_color_on_primary"
                tools:ignore="TouchTargetSizeCheck" />
        </LinearLayout>

        <EditText
            android:id="@+id/multiLineText_Original"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginStart="48dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="48dp"
            android:autofillHints="@string/placeholder_original"
            android:ems="10"
            android:focusable="false"
            android:gravity="start|top"
            android:hint="@string/placeholder_original"
            android:inputType="none"
            android:linksClickable="false"
            android:longClickable="false"
            android:textColorHint="#757575"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/linearLayout_Search" />

        <EditText
            android:id="@+id/multiLineText_Translation"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginStart="48dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="48dp"
            android:autofillHints="@string/placeholder_translation"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/placeholder_translation"
            android:inputType="textMultiLine"
            android:textColorHint="#757575"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.494"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/multiLineText_Original" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="64dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/multiLineText_Translation">

            <Button
                android:id="@+id/button_previous"
                style="@android:style/Widget.Material.Light.Button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text="@string/button_previous"
                android:textColor="@android:color/primary_text_dark" />

            <Button
                android:id="@+id/button_Save"
                style="@android:style/Widget.Material.Light.Button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:text="@string/button_save"
                android:textColor="@android:color/primary_text_dark"
                android:textSize="18sp" />

            <Button
                android:id="@+id/button_next"
                style="@android:style/Widget.Material.Light.Button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text="@string/button_next"
                android:textColor="@android:color/primary_text_dark" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>